some ui changes

--- a/style.css
+++ b/style.css
@@ -40,13 +40,15 @@
   .grid .forbid{
      cursor: not-allowed;
   }
+
   #messege ,#play{
-    font-size: 2em;
+    font-size: 4em;
     font-weight: 900;
     font-family:Arial, Helvetica, sans-serif;
+    font-family:sans-serif;
     text-shadow: 1px 1px 1px whitesmoke;
-    color: #790707;
-    text-shadow: 1px 1px 1px whitesmoke;
+    color: whitesmoke;
+    text-shadow: 1px 1px 3px rgb(18, 16, 16),2px 2px 3px rgb(18, 16, 16),3px 3px 3px rgb(18, 16, 16);
     transition: all .4s ease-in-out;
   }
 
@@ -134,3 +136,9 @@
     background-color: #5b5b5b;
   }
 
+
+  @media (max-width:700px) {
+    #messege ,#play{
+      font-size: 2em;
+    }
+  }
